game3/mysql-deployment.yaml
# Deploys my mysql server.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      # mysql container
      - name: mysql-db
        image: fayabobo/mysql:1.2
        ports:
        - containerPort: 3306
