game3/mysql-service.yaml
# Service which exposes my mysql server
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mysql-db
  ports:
  - port: 3306
    targetPort: 3306
