game3/tomee-service-https.yaml
# Service which exposes my tomee
apiVersion: v1
kind: Service
metadata:
  name: tomee-service-loadbalancer
  annotations:
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS"}'
spec:
  type: LoadBalancer
  selector:
    app: tomee
  ports:
  - name: my-https-port
    port: 8080
    targetPort: 8080
