game3/tomee-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomee-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: tomee-service-loadbalancer
          servicePort: 8080
